Updated UI and fixed JS logic

--- a/screen_2.html
+++ b/screen_2.html
@@ -14,13 +14,15 @@
         <h1>RED CARD 2018</h1>
         <h2>China Digital Football Awards</h2>
         <p>The Red Card is globally recognized as a leading annual report to assesses the most influencial European
-            football clubs, leagues and players online in China. Now in its 7th year, Red Ccard 2018 has been reimagined
+            football clubs, leagues and players online in China. Now in its 7th year, Red Card 2018 has been reimagined
             to include 5 additional awards to recognise the many areas of digital performance in China, thereby taking
             the Red Card report to a whole new level. Due to the nature and variety of these new categories, the winners
             will be chosen by a panel of 6 industrial experts, rather than by the traditional metrics used to assess the
             three headline awards</p>
-        <p>This report aims to educate teams teams and organizations on how to improve their China digital strategy,
+        <p id="para">This report aims to educate teams teams and organizations on how to improve their China</p>
+        <p class="q">digital strategy,
             what today's Chinese fan wants and what works online in China</p>
+        <img src="icon_awards.png" alt="" class="side">
     </div>
     <div class="row">
         <div class="head">
@@ -33,45 +35,21 @@
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
@@ -90,45 +68,21 @@
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
@@ -147,45 +101,21 @@
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
@@ -204,45 +134,21 @@
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
@@ -261,45 +167,21 @@
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
                 <p>Lorem</p>
             </div>
-        </div>
-        <div class="head">
-            <img src="icon_awards.png" alt="" class="arrow">
-            <h2>BEST CLUBS</h2>
-        </div>
-        <div class="boxes">
             <div class="box">
                 <img src="1.png" alt="" class="team">
                 <h4>Lorem ipsum</h4>
@@ -308,7 +190,8 @@
         </div>
     </div>
     <div class="end">
-        <h2>RED CARD 2019 WINNERS AND REPORTS TO BE LAUNCHED ON 24TH JANUARY 2019</h2>
+        <h2>RED CARD 2019 WINNERS<br>AND REPORTS TO BE LAUNCHED<br>ON 24TH JANUARY 2019</h2>
+        <img src="icon_awards.png" alt="" class="side">
     </div>
 </body>
 
